# ChatGPT-API-Recipes

./: .env.example  README.md  pyproject.toml
recipes/: chatgpt_async_test.py  chatgpt_test.py
recipes/article/: article_creator.py  output.txt
recipes/basic/: chatgpt_async_test.py  chatgpt_test.py
recipes/chatbot/: conversation.py  converter.py  embedding.csv  embedding.py  post.py  scraped.csv  search.py  tweeter.py
recipes/pdf/: app.py  invoices.csv  load_pdf.py
recipes/postbot/: generator.py  system.txt  user.txt
recipes/whisper/: srt.py  summarizer.py  text.py  translator.py
