[tool.poetry]
name = "ChatGPT-API-Recipes"
version = "0.1.0"
description = ""
authors = ["perforb <dev.perfumed.garden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.3.8"
python-dotenv = "^1.0.0"
tweepy = "^4.14.0"
pandas = "^2.1.4"
tiktoken = "^0.5.2"
scipy = "^1.11.4"
langchain = "^0.0.348"
google-api-python-client = "^2.110.0"
pypdf = "^3.17.1"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
